navbar fix contact
sticky and navbar overlapp fix

--- a/style.css
+++ b/style.css
@@ -132,16 +132,17 @@ p{
   list-style-type: none;
   margin: 0px;
   padding: 5px;
-  overflow: hidden;
+  overflow: hidden ;
   text-align: center; 
   background-color: #000000;
   display: flex;
   justify-content: space-between;
   top: 0;
   width: 100%;
-  position: sticky;
+  position:sticky;
   top: 0;
   transition: all 0.5s;
+  z-index: 1
   
 }
 
